# datatype99

./: .clang-format  .gitignore  .gitmodules  .mailmap  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  datatype99.h  tests.c
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  array_in_variant.c  ast.c  binary_tree.c  binary_tree_malloc.c  gen_metadata.c  reversed_print.c  token.c
examples/derive/: CMakeLists.txt  command_menu.c  metadata.c  print.c  record_metadata.c
include/: datatype99.h  mirwa.h
include/datatype99/: choice.h  unit_t.h
include/mirwa/: aux.h  effect.h  unit.h  unit_t.h
scripts/: check-fmt.sh  fmt.sh  test-all.sh  test-examples.sh  test.sh
tests/: CMakeLists.txt  derive.c  metalang99_compliant.c  record_derive.c  tests.c  version.c
